--- a/DK/mysolution.dk/app.json
+++ b/DK/mysolution.dk/app.json
@@ -10,7 +10,14 @@
   "help": "",
   "url": "",
   "logo": "",
-  "dependencies": [],
+  "dependencies": [
+    {
+      "id": "a8f2a5ab-9e70-4e52-aeb9-78a6eb010c79",
+      "name": "mysolution.w1",
+      "publisher": "Andershaffjensen",
+      "version": "1.0.0.0"
+    }
+  ],
   "screenshots": [],
   "platform": "1.0.0.0",
   "application": "22.0.0.0",
