--- a/W1/mysolution.w1/app.json
+++ b/W1/mysolution.w1/app.json
@@ -10,7 +10,14 @@
   "help": "",
   "url": "",
   "logo": "",
-  "dependencies": [],
+  "dependencies": [
+    {
+      "id": "37699fe6-a5b9-4434-8ed3-befaef70637c",
+      "name": "Licensing",
+      "publisher": "Andershaffjensen",
+      "version": "1.0.0.0"
+    }
+  ],
   "screenshots": [],
   "platform": "1.0.0.0",
   "application": "22.0.0.0",
