--- a/DK/.AL-Go/settings.json
+++ b/DK/.AL-Go/settings.json
@@ -3,12 +3,5 @@
   "appFolders": [],
   "testFolders": [],
   "artifact": "bcartifacts/sandbox/23.0.12034.13450/dk/closest",
-  "repoVersion": "1.1",
-  "appDependencyProbingPaths": [
-    {
-      "repo": ".",
-      "release_status": "include",
-      "projects": "W1"
-    }
-  ]
+  "repoVersion": "1.1"
 }
